TFP-5140 Ny løsning for å håndtere at vi har flere eksisterende tilrettelegginger for samme arbeidsgiver (arbeidsforholdsid). Forhindrer også dobling av tilrettelegginger ved revurdering når flere arbeidsforhold i samme virksomhet